--- a/src/index.html
+++ b/src/index.html
@@ -6,8 +6,21 @@
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <script>
+    function alertmessage(params) {
+      alert(
+
+        <div class="alert alert-danger" role="alert">
+         A simple danger alert—check it out!
+        </div>
+        
+
+      );
+
+    }
+  </script>
 </head>
-<body>
+<body class=" bg-info">
   <app-root></app-root>
 </body>
 </html>
